--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es6",
     "lib": [
       "es2016",
-      "esnext.asynciterable"
+      "esnext.asynciterable",
+      "dom"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
